--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookrentalsystem
+spring.datasource.username=postgres
+spring.datasource.password=123
 
+# Hibernate properties
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Log level for root logger
+logging.level.root=DEBUG
+
+# Log level for specific packages or classes
+logging.level.org.springframework=DEBUG
+logging.level.com.bootcamp.bookrentalsystem=DEBUG
