feat: Notify email of accpetance when admin accept a request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ logging.level.root=DEBUG
 # Log level for specific packages or classes
 logging.level.org.springframework=DEBUG
 logging.level.com.bootcamp.bookrentalsystem=DEBUG
+
+spring.profiles.active=dev
+## Email configuration
+huameng.email.sender.host=smtp.gmail.com
+huameng.email.sender.debug=true
+huameng.email.sender.user=bookrentalsystem.kit@gmail.com
+huameng.email.sender.password=ytasrpynjqfcexxt
