--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookrentalsystem
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.username=springboot
+spring.datasource.password=springboot
 
 # Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
