--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookrentalsystem
-spring.datasource.username=postgres
-spring.datasource.password=123
+#spring.datasource.url=jdbc:postgresql://localhost:5432/bookrentalsystem
+#spring.datasource.username=postgres
+#spring.datasource.password=123
+
+# GCP CLOUD SQL Database Configuration
+spring.cloud.gcp.sql.database-name=bookrentalsystem
+spring.cloud.gcp.sql.instance-connection-name=bookrental-388303:asia-south2:bookrental
+spring.cloud.gcp.project-id=bookrental-388303:asia-south2
+spring.cloud.gcp.credentials.location=classpath:bookrental-gcp-service-account-credentials.json
+spring.datasource.username=bookrental
+spring.datasource.password=96<Y'rQOf-ioALPt
+
 
 # Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
