add gcp property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 spring.cloud.gcp.sql.database-name=bookrentalsystem
 spring.cloud.gcp.sql.instance-connection-name=bookrental-388303:asia-south2:bookrental
 spring.cloud.gcp.project-id=bookrental-388303:asia-south2
-spring.cloud.gcp.credentials.location=classpath:bookrental-gcp-service-account-credentials.json
+spring.cloud.gcp.credentials.location=file:src/main/resources/bookrental-gcp-service-account-credentials.json
 spring.datasource.username=bookrental
 spring.datasource.password=96<Y'rQOf-ioALPt
 
