fix: database connection to elephantsql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookrentalsystem
-spring.datasource.username=postgres
-spring.datasource.password=123
+#spring.datasource.url=jdbc:postgresql://localhost:5432/bookrentalsystem
+#spring.datasource.username=postgres
+#spring.datasource.password=123
+
+# ElephantSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://john.db.elephantsql.com:5432/khxfkahb
+spring.datasource.username=khxfkahb
+spring.datasource.password=XBUr3xC-vj7Ue0vRWfaS285UaXDQ9Uk4
 
 # GCP CLOUD SQL Database Configuration
 #spring.cloud.gcp.sql.database-name=bookrentalsystem
